--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,10 @@ color-eyre = "0.6.5"
 crossterm = "0.29.0"
 ratatui = "0.29.0"
 rand = "0.9.2"
-parameterized = "2.0.0"
 
 [profile.dev]
 overflow-checks = false
+opt-level = 1
+
+[profile.test]
+inherits = "dev"
