--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,11 @@ color-eyre = "0.6.5"
 crossterm = "0.29.0"
 ratatui = "0.29.0"
 rand = "0.9.2"
+winit = "0.30.12"
+pixels = "0.15.0"
+winit_input_helper = "0.16.0"
+wgpu = "26.0.1"
+pollster = "0.4.0"
 
 [profile.dev]
 overflow-checks = false
